= Overview

For instructions on upgrading to newer versions, visit {mongoid.org}[http://mongoid.org/docs/upgrading.html].

== 2.1.1

* #1021, #719 Many to many relations dont trigger extra database queries when
pushing new documents.

* #607 Calling create on large associations does not load the entire relation.

* #1064 Mongoid::Paranoia should respect unscoped and scoped.

== 2.1.0

=== Major Changes

* Mongoid now requires MongoDB 1.8.x in order to properly support the #bit and
  #rename atomic operations.

* Traditional slave support has been removed from Mongoid.
  Replica sets should be used in place of traditional master and slave setups.

* Custom field serialization has changed. Please see
  {serializable}[https://github.com/mongoid/mongoid/blob/master/lib/mongoid/fields/serializable.rb]
  for changes.

* The dirty attribute tracking has been switched to use ActiveModel, this brings many bug fixes and changes:
  * #756 After callbacks and observers see what was changed instead of changes just made being in previous_changes
  * #434 Documents now are flagged as dirty when brand new or the state on instantiation differs from the database state. This is consistent with ActiveRecord.
  * #323 Mongoid now supports [field]_will_change! from ActiveModel::Dirty

* Mongoid model preloading in development mode now defaults to false.

* :autosave => true on relational associations now saves on update as well as
  create.

* Mongoid now has an identity map for simple find by id queries. See the
  website for documentation.

=== New Features

* #1067 Fields now accept a :versioned attribute to be able to disable what
  fields are versioned with Mongoid::Versioning. (Jim Benton)

* #587 Added order preference to many and many to many associations (Gregory Man)

* Added ability to chain order_by statements (Gregory Man)

* #961 Allow arbitrary Mongo::Connection options to pass through Mongoid::Config::Database object. (Morgan Nelson)
