@@ -95,7 +95,8 @@ module Mongoid #:nodoc:
     #
     # @since 2.0.0.rc.6
     def update_attribute(name, value)
-      write_attribute(name, value) ? save(:validate => false) : true
+      write_attribute(name, value)
+      save(:validate => false)
     end
 
     # Update the document attributes in the datbase.
